# EasyRename

./: .gitignore  CHANGELOG.md  README.md  README_zh.md  components.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: README_zh.md
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: VirtualFileList.vue
src/router/: index.ts
src/stores/: file.ts  historyStore.ts
src/views/: Home.vue  about.vue
src/views/BatchRename/: index.vue
